<resources>
    <string name="app_name" translatable="false">ARAD AFOS</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="Enter_email">Enter email</string>
    <string name="Password">Password</string>
    <string name="passwordview">Your Password</string>
    <string name="emailview">Your Email</string>
    <string name="welcometologin">Welcome"</string>

</resources>